# rhubarb

./: .gitignore  CMakeLists.txt  README.md  config.json
perft/: perft.py  perft.sh
sprt/: fastchess  sprt.sh
src/: attacks.h  bench.cpp  bitboard.cpp  bitboard.h  board.cpp  board.h  constants.h  evaluation.cpp  evaluation.h  main.cpp  makemove.cpp  makemove.h  move.h  movegen.cpp  movegen.h  parser.cpp  parser.h  perft.cpp  perft.h  search.cpp  search.h  timemanagement.cpp  timemanagement.h  transposition.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
